# xnes

./: .gitignore  CMakeLists.txt  README.md
assets/config/: nes_config.json  nes_config_web.json
assets/roms/: Super_Tilt_Bro_(E).nes
build_web/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
build_web/html/: nes.html  nes.js  nes.wasm  shell_minimal.html
src/: emulator.cpp  emulator.hpp  main.cpp  platform_wasm.hpp  sound.hpp  xn_openal.hpp
src/graphics/: shader.h  xn_gl.hpp  xn_sdl.cpp  xn_sdl.hpp  xn_texture.hpp
src/nes/: apu.hpp  bus.hpp  cpu.cpp  cpu.hpp  instruction_set.hpp  mappers.cpp  mappers.hpp  palettes.hpp  ppu.cpp  ppu.hpp  rom.hpp
src/util/: xn_json.cpp  xn_json.hpp
